# bzzt

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  setup.sh
assets/fonts/: default.bzc
assets/shaders/: glyph.fs  glyph.vs
assets/ui/: file_browser.bui  main_menu.bui  prompt.bui  sidebar.psci  sidebar_editor.bui  sidebar_play.bui  ui.psci
docs/: bzzt ui.txt
src/: board.c  board.h  build.bat  bz_char.c  bz_char.h  color.h  debugger.c  debugger.h  editor.c  editor.h  engine.c  engine.h  input.c  input.h  main.c  object.c  object.h  renderer.c  renderer.h  world.c  world.h
src/core/: board.c  board.h  board_renderer.c  board_renderer.h  bzzt.h  camera.h  cell.h  color.h  coords.h  debugger.c  debugger.h  engine.c  engine.h  file_browser.c  file_browser.h  gameplay.c  gameplay.h  input.c  input.h  main.c  object.c  object.h  renderer.c  renderer.h  stat.c  timing.c  timing.h  world.c  world.h  zip_archive.c  zip_archive.h
src/core/editor/: editor.c  editor.h
src/core/formats/: bui_loader.c  bui_loader.h
src/core/input/: input.c  input.h
src/core/ui/: ui.c  ui.h  ui_action.c  ui_bindings.c  ui_element.c  ui_ids.c  ui_layer.c  ui_messages.c  ui_messages.h  ui_overlay.c  ui_renderer.c  ui_renderer.h  ui_surface.c
src/editor/: editor.c  editor.h
src/formats/: bui_loader.c
src/ui/: overlay.c  overlay.h  text.c  text.h  ui.c  ui.h  ui_bindings.c  ui_bindings.h  ui_element.c  ui_element.h  ui_layer.c  ui_layer.h  ui_overlay.c  ui_overlay.h  ui_renderer.c  ui_renderer.h  ui_surface.c  ui_surface.h
src/utils/: code_page_lut.h  yaml_loader.c  yaml_loader.h  zzt_element_defaults.h
